# ascii-weather

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BACKLOG.md  VISION.md
site/: index.html
src/ascii_weather/: art.py  cli.py  colors.py  weather.py
tests/: test_art.py  test_cli.py  test_colors.py  test_weather.py
